# AutoPWN-Suite

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  __init__.py  api.py  autopwn.py  banners.py  color.py  docker-compose.yml  example.conf  files_exploits.csv  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  poetry-tests.yml  publish-docker.yml  tests.yml
api/: __init__.py
modules/: banners.py  color.py  colors.py  exploit.py  exploit_search.py  exploits.csv  getexploits.py  keyword_generator.py  logger.py  nist_search.py  nmap.py  outfile.py  random_user_agent.py  report.py  scanner.py  searchvuln.py  utils.py  web_ui.py
modules/colorama/: __init__.py  ansitowin32.py
modules/daemon/: autopwn-daemon.sh  autopwn.service  daemon_installer.py
modules/data/: web_discovery.txt
modules/nvdlib/: classes.py  cpe.py  cve.py  get.py  nvdlib.py
modules/user_agents/: user_agents.json
modules/web/: crawler.py  dirbust.py  lfi.py  sqli.py  webvuln.py  xss.py
modules/web/bs4/: __init__.py  dammit.py  diagnose.py  element.py  formatter.py
modules/web/bs4/builder/: __init__.py  _html5lib.py  _htmlparser.py  _lxml.py
modules/web_ui_static/: app.js  index.html  styles.css
tests/: conftest.py  test_setup_validation.py
tests/unit/: test_api.py  test_autopwn.py  test_banners.py  test_daemon_installer.py  test_getexploits.py  test_logger.py  test_nist_search.py  test_report.py  test_scanner.py  test_searchvuln.py  test_utils.py  test_web_crawler.py  test_web_dirbust.py  test_web_lfi.py  test_web_sqli.py  test_web_ui.py  test_web_ui_static.py  test_web_webvuln.py  test_web_xss.py
